--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain",
+  "name": "programacion",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "crypto": "^1.0.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mysql2": "^3.10.1",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   }
